--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,7 @@ html {
 body {
 	background: var(--body);
 	font-family: var(--font);
-	font-size: 16px;
+	font-size: 14px;
 	font-weight: 400;
 	position: relative;
 }
@@ -49,8 +49,34 @@ h5 {
 h6 {
 	font-size: 0.67em;
 }
+p{
+	font-size: 14px;
+	color: #777777;
+	font-weight: 400;
+}
+hr{
+	border-top: 0.1rem solid #DFE4E3;
+    margin: 2rem 0;
+}
+input{
+	border-radius: 6px;
+	border: 1px solid #C3CECC;
+	font-size: 14px;
+	color: var(--dark);
+	font-weight: 400;
+	font-family: var(--font);
+	margin-bottom: 0;
+}
+input:focus{
+	border-color: var(--primary) !important;
+}
+input[type=radio]:checked {
+	accent-color: green;
+}
+
 .container {
 	max-width: 144rem;
+	position: initial;
 }
 .column.column-0 {
 	flex: 0 0 auto;
@@ -67,6 +93,9 @@ h6 {
 }
 .justify-between{
 	justify-content: space-between;
+}
+.justify-start{
+	justify-content: flex-start;
 }
 .button {
 	margin-bottom: 0;
@@ -157,7 +186,7 @@ h6 {
 	object-fit: cover;
 }
 
-/* ----Hrader Breadcrumbs---- */
+/* ----Header Breadcrumbs---- */
 .breadcrumbs {
 	margin-bottom: 0px;
 }
@@ -174,9 +203,8 @@ h6 {
 	margin-right: 10px;
 }
 .pilar_indicator {
-	height: 25px;
-	width: 25px;
-	border-radius: 50%;
+	padding: 2px 10px;
+    border-radius: 20px;
 	background: var(--white-shade);
 	color: var(--dark);
 	display: inline-flex;
@@ -205,8 +233,9 @@ h6 {
 }
 
 /* ----Main Wrapper---- */
-main .pilar_main_wrapper {
+main.pilar_main_wrapper {
 	padding: 50px 0px;
+	position: relative;
 }
 .pilar_main_wrapper .pilar_devider {
 	justify-content: space-between;
@@ -221,6 +250,116 @@ main .pilar_main_wrapper {
 	flex-direction: column;
 }
 
+/* card Body */
+.pilar_card_body {
+    height: calc(100% - 200px);
+    overflow: auto;
+}
+.pilar_card_body::-webkit-scrollbar {
+    display: none;
+}
+
+.pilar_modal{
+	margin-bottom: 10px;
+}
+.pilar_header_content{
+	margin-bottom: 0px;
+}
+.pilar_modal_opener, .pilar_modal_hide{
+	margin-right: 10px;
+	display: inline-flex;
+    align-items: center;
+}
+.pilar_title{
+	margin-bottom: 0px !important;
+}
+
+.pilar_main_point{
+	margin-bottom: 25px;
+}
+.pilar_point{
+	margin-right: 10px;
+}
+
+.pilar_input h5{
+	font-size: 14px;
+	font-weight: 600;
+	margin-bottom: 10px;
+}
+
+.pilar_input_group{
+	margin-bottom: 20px;
+	gap: 10px;
+}
+.pilar_input_group .column{
+	margin-bottom: 0px;
+}
+
+.pilar_input_group label{
+	font-size: 14px;
+	font-weight: 500;
+	color: var(--dark);
+	margin-bottom: 20px;
+}
+
+/* Pilar Image Input */
+.pilar_input_group.image{
+	gap: initial;
+	flex-wrap: wrap;
+}
+
+.pilar_image_input{
+	background: var(--white);
+	border: 1px solid #C3CECC;
+	padding: 8px;
+	border-radius: 12px;
+}
+.pilar_image_input input[type="radio"]{
+	display: none;
+}
+.pilar_image_input .pilar_variation_image{
+	width: 100%;
+	height: 105px;
+	object-fit: cover;
+	border-radius: 6px;
+	margin-bottom: 5px;
+	box-shadow: 0px 2px 6px #00000014;
+}
+.pilar_image_input .row{
+	width: 100%;
+}
+.pilar_image_input .pilar_image_title{
+	margin-bottom: 2px;
+}
+.pilar_image_input .pilar_image_content{
+	margin-bottom: 0px;
+}
+.pilar_image_input .button-settings{
+	margin-right: 0px;
+	background: var(--card-button-1);
+}
+.pilar_preview_image{
+	margin-bottom: 20px;
+}
+.pilar_preview_image img{
+	max-height: 56rem;
+	height: 100%;
+	width: 100%;
+	object-fit: cover;
+	border-radius: 12px;
+}
+
+.pilar_replicate img{
+	width: 100%;
+	height: 6.5rem;
+	object-fit: cover;
+	border-radius: 12px;
+}
+.pilar_replicate .active img{
+	border: 4px solid var(--vibrant);
+}
+
+/* Card Footer */
 .pilar_product_card .pillar_product_footer {
 	display: inline-block;
 	width: 100%;
@@ -236,10 +375,36 @@ main .pilar_main_wrapper {
 }
 
 
+/* Modal Box */
+.pilar_modal_box{
+	background: var(--white);
+    position: absolute;
+    inset: 50px 0px;
+	z-index: 10;
+	border-radius: 0px 12px 12px 0px;
+    width: 50%;
+    left: -200%;
+	transition: all 0.4s;
+}
+.pilar_modal_box.active{
+	left: 0%;
+	transition: all 0.4s;
+}
+.pilar_modal_header{
+	padding: 15px 80px;
+	background: var(--white-shade-2);
+	border-radius: 0px 12px 0px 0px;
+}
+.pilar_modal_body{
+	padding: 30px 80px;
+}
+
 /* Step */
 
-.step {
+.pilar_step {
     display: none;
+	height: 100%;
+	padding: 30px 20px 0px;
 }
 
 /* Settings */
